--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
     "tw-elements": "^1.0.0-beta1",
     "web-vitals": "^2.1.4"
   },
