--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@2gis/mapgl": "^1.35.1",
+    "@babel/preset-env": "^7.21.4",
     "@headlessui/react": "^1.7.13",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.18.6",
     "tailwindcss": "^3.2.7"
   }
 }
