--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@2gis/mapgl": "^1.35.1",
     "@babel/preset-env": "^7.21.4",
     "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.17",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
