--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "flowbite-react": "^0.4.3",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
@@ -27,6 +28,7 @@
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "styled-components": "^5.3.10",
     "swiper": "^9.2.4",
     "tw-elements": "^1.0.0-beta1",
     "web-vitals": "^2.1.4"
